авторизация, аккаунт миланы, е2е-тесты, онбординг
